--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,12 @@
+body {
+  height: 100%;
+  margin: 0;
+}
+* {
+  box-sizing: border-box;
+}
 header {
   width: 100%;
-  height: 250px;
+  height: 50px;
   background: #cba6f7;
 }
