--- a/src/styles.css
+++ b/src/styles.css
@@ -9,4 +9,16 @@ header {
   width: 100%;
   height: 50px;
   background: #cba6f7;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
+}
+button {
+  width: 20px;
+  height: auto;
+  padding: 0;
+  background-color: transparent;
+  border: none;
 }
