Change background color for header

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
 header {
   width: 100%;
   height: 44px;
-  background: #cba6f7;
+  background: #7b2cbf;
 
   display: flex;
   align-items: center;
