--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,7 @@ button {
   background: url("https://avatars.githubusercontent.com/u/98334884?v=4");
   background-size: contain;
 }
+header > h1 {
+  color: white;
+  margin: 0;
+}
