--- a/src/styles.css
+++ b/src/styles.css
@@ -55,10 +55,18 @@ header > h1 {
 }
 .sidebar > div {
   outline: solid black 1px;
+  padding-left: 20px;
 }
 .due {
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  padding-top: 40px;
 }
 .projects {
   flex: 4;
+}
+.sidebar > div > button {
+  font-size: 14px;
 }
