--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,8 @@ header > h1 {
 }
 .sidebar > div {
   outline: solid black 1px;
-  padding-left: 20px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 .due {
   flex: 1;
@@ -63,10 +64,17 @@ header > h1 {
   display: flex;
   flex-direction: column;
   padding-top: 40px;
+  gap: 5px;
 }
 .projects {
   flex: 4;
 }
 .sidebar > div > button {
   font-size: 14px;
+  background-color: rgba(128, 128, 128, 0.212);
+  width: 220px;
+  border-radius: 4px;
+  padding: 7px;
+
+  display: flex;
 }
