--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Cabin&display=swap");
 html {
   height: 100%;
 }
@@ -10,6 +11,7 @@ body {
 }
 * {
   box-sizing: border-box;
+  font-family: "Cabin", sans-serif;
 }
 header {
   width: 100%;
