--- a/src/styles.css
+++ b/src/styles.css
@@ -77,8 +77,21 @@ header > h1 {
   padding: 7px;
 
   display: flex;
+  gap: 8px;
 }
 .sidebar > div > button:hover {
-  background-color: rgba(128, 128, 128, 0.212);
+  background-color: rgba(128, 128, 128, 0.116);
   cursor: pointer;
+}
+.today-icon,
+.upcoming-icon {
+  width: 17px;
+}
+.today-icon {
+  filter: invert(36%) sepia(14%) saturate(4743%) hue-rotate(130deg)
+    brightness(91%) contrast(101%);
+}
+.upcoming-icon {
+  filter: invert(65%) sepia(63%) saturate(6667%) hue-rotate(202deg)
+    brightness(100%) contrast(102%);
 }
