--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ header > h1 {
   padding-top: 30px;
 }
 .projects {
-  flex: 6;
+  flex: 8;
 }
 .sidebar > div > button {
   font-size: 14px;
@@ -94,4 +94,8 @@ header > h1 {
 .upcoming-icon {
   filter: invert(65%) sepia(63%) saturate(6667%) hue-rotate(202deg)
     brightness(100%) contrast(102%);
+}
+.projects > h4 {
+  font-size: 15px;
+  margin-bottom: 17px;
 }
