--- a/src/styles.css
+++ b/src/styles.css
@@ -56,7 +56,6 @@ header > h1 {
   flex-direction: column;
 }
 .sidebar > div {
-  outline: solid black 1px;
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -100,4 +99,5 @@ header > h1 {
   margin-top: 0;
   margin-bottom: 17px;
   padding: 7px;
+  padding-left: 0;
 }
