--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,10 @@ header > h1 {
 
   display: flex;
   flex-direction: column;
+  transition: 0.6s;
+}
+.sidebar.inactive {
+  transform: translateX(-300px);
 }
 .sidebar > div {
   padding-left: 16px;
