--- a/src/styles.css
+++ b/src/styles.css
@@ -160,11 +160,17 @@ form {
   display: flex;
   gap: 10px;
   justify-content: flex-end;
-  margin-top: 30px;
+  margin-top: 35px;
 }
 .buttons > button {
-  border: solid 1px black;
-  width: 55px;
-  padding: 5px;
-  border-radius: 5px;
+  width: 65px;
+  padding: 7px;
+  border-radius: 4px;
+}
+.buttons > .add {
+  background-color: #7b2cbf;
+  color: white;
+}
+.buttons > .cancel {
+  background-color: rgba(128, 128, 128, 0.116);
 }
