--- a/src/styles.css
+++ b/src/styles.css
@@ -139,8 +139,9 @@ input:focus {
   position: fixed;
   top: 25%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  transition: 300ms ease-in-out 550ms;
+  transform: translate(-50%, -50%) scale(0);
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
   border-radius: 7px;
   height: 180px;
   z-index: 10;
@@ -153,13 +154,21 @@ input:focus {
 }
 .overlay {
   position: fixed;
-  opacity: 1;
-  transition: 200ms ease-in-out 550ms;
+  opacity: 0;
+  transition: 200ms ease-in-out;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
+.popup.active {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+.overlay.active {
+  opacity: 1;
   pointer-events: all;
 }
 form {
