Style project with padding, border-radius, width and flex

--- a/src/styles.css
+++ b/src/styles.css
@@ -201,3 +201,10 @@ button:hover {
   display: flex;
   flex-direction: column;
 }
+.project {
+  padding: 7px;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 100%;
+  display: flex;
+}
