Position left and right btn containers with flex

--- a/src/styles.css
+++ b/src/styles.css
@@ -249,3 +249,16 @@ button:hover {
 .todo-popup #desc {
   border: none;
 }
+.todo-popup .buttons {
+  justify-content: space-between;
+}
+.leftBtns,
+.rightBtns {
+  flex: 1;
+  display: flex;
+  gap: 30px;
+  justify-content: flex-end;
+}
+.leftBtns {
+  justify-content: start;
+}
