--- a/src/styles.css
+++ b/src/styles.css
@@ -300,3 +300,11 @@ button:hover {
 #projectSelect {
   padding: 4px;
 }
+.content-wrapper {
+  display: flex;
+  height: 100vh;
+}
+.content {
+  flex: 5;
+  display: flex;
+}
