--- a/src/styles.css
+++ b/src/styles.css
@@ -315,4 +315,15 @@ button:hover {
   outline: solid orange 1px;
   width: 70%;
   height: 60px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.title-box {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.other-info {
+  flex: 1;
 }
