--- a/src/styles.css
+++ b/src/styles.css
@@ -328,10 +328,16 @@ button:hover {
   flex: 1;
   display: flex;
   gap: 10px;
+  align-items: center;
+  justify-content: center;
 }
 .title-wrapper > p {
   margin: 0;
 }
 .desc {
   font-size: 12px;
+}
+.edit {
+  width: 22px;
+  height: 22px;
 }
