Turn cursor to pointer on hover for edit

--- a/src/styles.css
+++ b/src/styles.css
@@ -341,6 +341,9 @@ button:hover {
   width: 22px;
   height: 22px;
 }
+.edit:hover {
+  cursor: pointer;
+}
 .todo-date,
 .todo-priority {
   font-size: 15px;
