--- a/src/styles.css
+++ b/src/styles.css
@@ -117,6 +117,9 @@ header > h1 {
   border-bottom: black solid 1px;
 }
 .add-project {
+  justify-content: center;
+}
+.add-project > img {
   width: 17px;
 }
 .add-project:hover {
