--- a/src/styles.css
+++ b/src/styles.css
@@ -369,3 +369,24 @@ button:hover {
 .todo-priority {
   font-size: 15px;
 }
+.content > div {
+  transform: scale(0);
+}
+.Default.active {
+  transform: scale(1);
+  width: 100%;
+  flex: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+.content > div.active {
+  transform: scale(1);
+  width: 100%;
+  flex: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
