Define size for .trash and .edit icons
Hover effect for .trash icon

--- a/src/styles.css
+++ b/src/styles.css
@@ -359,10 +359,17 @@ button:hover {
   font-size: 12px;
 }
 .edit {
-  width: 22px;
-  height: 22px;
+  width: 18px;
+  height: 18px;
 }
 .edit:hover {
+  cursor: pointer;
+}
+.trash {
+  width: 18px;
+  height: 18px;
+}
+.trash:hover {
   cursor: pointer;
 }
 .todo-date,
