--- a/src/styles.css
+++ b/src/styles.css
@@ -55,9 +55,17 @@ header > h1 {
   display: flex;
   flex-direction: column;
   transition: 0.6s;
+
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 20;
+  left: 20;
+  padding-top: 20px;
+  overflow-x: hidden;
 }
 .sidebar.inactive {
-  transform: translateX(-300px);
+  width: 0px;
 }
 .sidebar-btn {
   transition: 0.6s;
@@ -333,6 +341,8 @@ button:hover {
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  margin-left: 250px;
+  transition: 0.6s;
 }
 .todo {
   border-bottom: solid rgba(189, 189, 189, 0.555) 1px;
