Give color to checkbox

--- a/src/styles.css
+++ b/src/styles.css
@@ -413,3 +413,6 @@ button:hover {
   width: 14px;
   background: center / contain url("../visual-assets/trash-bin.png");
 }
+.checkbox {
+  accent-color: #7b2cbf;
+}
